# wsjtx

./: .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Configuration.ui  INSTALL  MetaDataRegistry.cpp  NEWS  README  Release_Notes.txt  commons.h  displayWidgets.txt  eclipse.txt  foxotpcode.cpp  foxotpcode.h  otpgenerator.cpp  otpgenerator.h  wsjtx.pro  wsjtx_config.h.in
Audio/: soundin.cpp  soundout.cpp
Darwin/: ReadMe.txt
Modulator/: Modulator.cpp
Network/: FileDownload.cpp  FileDownload.hpp  FoxVerifier.cpp  FoxVerifier.hpp  LotWUsers.cpp  LotWUsers.hpp  MessageClient.cpp  MessageClient.hpp  Network.pri  NetworkMessage.hpp  PSKReporter.cpp  PSKReporter.hpp  eclipse.txt  wsprnet.cpp
Transceiver/: DXLabSuiteCommanderTransceiver.cpp  HRDTransceiver.cpp  HamlibTransceiver.cpp  PollingTransceiver.cpp
UDPExamples/: MessageServer.cpp  MessageServer.hpp  jt_daemon.cpp
WSPR/: WSPRBandHopping.hpp
doc/: CMakeLists.txt
doc/common/: license.adoc  links.adoc
doc/user_guide/en/: acknowledgements.adoc  install-windows.adoc  introduction.adoc  measurement_tools.adoc  new_features.adoc  protocols.adoc  settings-frequencies.adoc  settings-radio.adoc  support.adoc  tutorial-example3.adoc  tutorial-example4.adoc  vhf-features.adoc
item_delegates/: MessageItemDelegate.cpp  MessageItemDelegate.hpp
lib/: astrosub.f90  avecho.f90  cablog.f90  cwsim.f90  decode_msk144.f90  decoder.f90  echosim.f90  four2a.f90  fspread_lorentz.f90  fst4_decode.f90  ft8_decode.f90  get_q3list.f90  go_chkfft.cmd  hspec.f90  jt9.f90  jt9a.f90  jt9com.f90  map65_mmdec.f90  mskrtd.f90  pctile.f90  q65_decode.f90  save_echo_params.f90  slasubs.f  sumsim.f90  sun.f90  symspec.f90  testfast9.f90  types.f90
lib/77bit/: hash22calc.f90  packjt77.f90
lib/fst4/: fastosd240_74.f90  fst4sim.f90  ldpcsim240_74.f90
lib/ft4/: ft4code.f90
lib/ft8/: foxgen.f90  foxgen_wrap.f90  ft8_a7.f90  ft8_downsample.f90  ft8b.f90  ft8code.f90  ft8d.f90  ft8sim.f90  ldpcsim174_91.f90  sync8.f90  watterson.f90
lib/qra/q65/: q65.f90  q65_encoding_modules.f90  q65_loops.f90  q65_set_list.f90  q65_set_list2.f90  q65sim.f90
lib/superfox/: Makefile  decode_rs.c  decode_sf.f90  encode_rs.c  foxgen2.f90  ft8_params.f90  ftrsd3.c  ftrsd3.f90  gen_sf_clo.f90  gen_sfox.f90  getpp3.f90  gtag.f90  hard_symbols.f90  init_rs.c  int_sf.h  julian.f90  plotspec.f90  popen_module.f90  qpc_decode2.f90  qpc_likelihoods2.f90  qpc_snr.f90  qpc_sync.f90  ran1.f90  rs_125_49.f90  rs_sf.c  rs_sf.h  rst8.f90  rstest.f90  sfox_ana.f90  sfox_assemble.f90  sfox_clo.f90  sfox_demod.f90  sfox_gen.f90  sfox_gen_gfsk.f90  sfox_hard.f90  sfox_mod.f90  sfox_pack.f90  sfox_params.f90  sfox_prob.f90  sfox_remove_ft8.f90  (+18 more)
lib/superfox/arm/: foxchk  sfrx  sftx
lib/superfox/arm32/: foxchk  sfrx  sftx
lib/superfox/arm64/: foxchk  sfrx  sftx
lib/superfox/armhf/: foxchk  sfrx  sftx
lib/superfox/linux/: foxchk  sfrx  sftx
lib/superfox/linux32/: foxchk  sfrx  sftx
lib/superfox/mac/: foxchk  sfrx  sftx
lib/wsprd/: wspr_wav.f90  wsprd.c
logbook/: AD1CCty.cpp  AD1CCty.hpp  WorkedBefore.cpp  WorkedBefore.hpp  logbook.cpp  logbook.h
manpages/man1/: wsjtx.1.txt
map65/: astro.cpp  astro.ui  devsetup.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotter.cpp
map65/libm65/: decode0.f90  ftninit.f90  m65.f90  map65a.f90  q65b.f90  wideband_sync.f90
models/: Bands.hpp  CabrilloLog.hpp  FoxLog.cpp  FoxLog.hpp  FrequencyList.cpp  FrequencyList.hpp  StationList.cpp
q65w/: CMakeLists.txt  about.cpp  astro.cpp  astro.ui  commons.h  devsetup.cpp  devsetup.h  devsetup.ui  getfile.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map65.pro  q65w.pro  soundin.cpp  soundin.h  widegraph.cpp  widegraph.h  widegraph.ui
q65w/libm65/: CMakeLists.txt  decode0.f90  display.f90  filbig.f90  ftninit.f90  m65a.f90  m65c.f90  map65a.f90  q65b.f90  q65wa.f90  recvpkt.f90  symspec.f90  timf2.f90  wideband_sync.f90
q65w/libq65/: CMakeLists.txt  decode0.f90  filbig.f90  ftninit.f90  ftnquit.f90  getcand2.f90  q65_sync.f90  q65b.f90  q65c.f90  q65wa.f90  recvpkt.f90  symspec.f90  wideband_sync.f90
qmap/: CMakeLists.txt  about.cpp  about.ui  astro.cpp  astro.h  astro.ui  commons.h  devsetup.cpp  devsetup.h  devsetup.ui  getfile.cpp  getfile.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotter.cpp  qmap.pro  soundin.cpp  soundin.h  widegraph.cpp  widegraph.h  widegraph.ui
qmap/libqmap/: CMakeLists.txt  astro.f90  astrosub.f90  cfom.f90  cfom_iq.f90  chkstat.f90  decode0.f90  fftbig.f90  filbig.f90  ftninit.f90  ftnquit.f90  getcand2.f90  njunk.f90  q65_sync.f90  q65b.f90  q65c.f90  qmapa.f90  read_qm.f90  recvpkt.f90  save_qm.f90  symspec.f90  timf2.f90  zaptx.f90
translations/: wsjtx_ca.ts  wsjtx_da.ts  wsjtx_en.ts  wsjtx_en_GB.ts  wsjtx_es.ts  wsjtx_hu.ts  wsjtx_it.ts  wsjtx_ja.ts  wsjtx_ru.ts  wsjtx_zh.ts  wsjtx_zh_HK.ts  wsjtx_zh_TW.ts
validators/: LiveFrequencyValidator.cpp  LiveFrequencyValidator.hpp
widgets/: BandComboBox.cpp  FoxLogWindow.cpp  FoxLogWindow.hpp  FoxLogWindow.ui  about.cpp  activeStations.cpp  activeStations.h  activeStations.ui  astro.cpp  astro.h  astro.ui  displaytext.cpp  displaytext.h  echograph.cpp  echograph.h  echograph.ui  echoplot.cpp  echoplot.h  logqso.cpp  mainwindow.cpp  mainwindow.cppNEW  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  plotter.cpp  plotter.h  widegraph.cpp  widegraph.h  widegraph.ui
(+17 files in other folders)
